grammar.js
    source_file: ($) => repeat(choice($._declaration, $._newline, ";")),

    _declaration: ($) =>
      choice(
        $.import_declaration,
        $.form_declaration,
        $.type_declaration,
        $.fixity_declaration,
        $.impl_declaration,
        $.type_annotation,
        $.value_definition,
      ),

    // ════════════════════════════════════════════════════════════════════
    //  Declarations
    // ════════════════════════════════════════════════════════════════════

    // prec.right: after `import ModuleName`, prefer consuming `as`/`(`
    // as part of this declaration rather than starting a new one.
    import_declaration: ($) =>
      prec.right(seq(
        "import",
        $.module_name,
        optional(choice($.import_alias, $.import_list)),
      )),

    import_alias: ($) => seq("as", field("alias", $.constructor)),

    import_list: ($) =>
      seq("(", sep1($.import_item, ","), ")"),

    import_item: ($) =>
      choice(
        $.identifier,
        $.parenthesized_operator,
        seq($.constructor, optional($.import_members)),
      ),

    import_members: ($) =>
      seq(
        "(",
        choice(
          "..",
          sep1($.constructor, ","),
        ),
        ")",
      ),

    module_name: ($) => sep1($.constructor, "."),

    // --- data (unified: ADT, GADT, type class) ---
    //
    // ADT shorthand:  data Name params := Con1 | Con2 fields
    // GADT body:      data Name := \params. { Con: Type; ... }
    // Type class:     data Name := \params. [Constraint =>] { method: Type; ... }
    //
    // The GADT body and type class body are distinguished by member
    // content (gadt_constructor uses uppercase : type, method_signature
    // uses lowercase : type). Both share the brace-delimited body form.

    form_declaration: ($) =>
      seq(
        "form",
        field("name", $.constructor),
        repeat($._type_binder),
        ":=",
        field("body", $._data_body),
      ),

    _data_body: ($) =>
      choice(
        $.adt_constructors,
        $.form_brace_body,
      ),

    adt_constructors: ($) => sep1($.adt_constructor, "|"),

    adt_constructor: ($) =>
      seq(field("name", $.constructor), repeat($._type_arg)),

    // Brace body: covers GADT constructors AND type class members.
    // Optionally preceded by `\params.` and/or `Constraint =>`.
    // Examples:
    //   data Expr := \a. { LitInt: Int -> Expr Int; ... }
    //   data Eq := \a. { eq: a -> a -> Bool }
    //   data Ord := \a. Eq a => { compare: a -> a -> Ordering }
    form_brace_body: ($) =>
      seq(
        optional(seq("\\", repeat1($._type_binder), ".")),
        repeat($.constraint),
        "{",
        optional(seq(sep1($._data_member, ";"), optional(";"))),
        "}",
      ),

    _data_member: ($) =>
      choice(
        $.gadt_constructor,
        $.method_signature,
        $.assoc_type_signature,
        $.assoc_data_signature,
      ),

    // GADT constructor: uppercase name with `:` type signature.
    gadt_constructor: ($) =>
      seq(field("name", $.constructor), ":", field("type", $._type)),

    // --- type (unified: alias and family) ---
    //
    // Type alias:  type Name params := TypeExpr
    // Type family: type Name :: Kind := \params. case param { Pat => Type; ... }
    //
    // Distinguished by `::` after the name (family) vs no `::` (alias).

    type_declaration: ($) =>
      choice(
        $.type_alias,
        $.type_family,
      ),

    type_alias: ($) =>
      seq(
        "type",
        field("name", $.constructor),
        repeat($._type_binder),
        ":=",
        field("type", $._type),
      ),

    // type Name :: Kind := \params. case param { Pat => Type; ... }
    type_family: ($) =>
      seq(
        "type",
        field("name", $.constructor),
        "::",
        field("result", $._kind),
        ":=",
        field("body", $._type),
      ),

    // --- fixity ---

    fixity_declaration: ($) =>
      seq(
        field("fixity", choice("infixl", "infixr", "infixn")),
        field("precedence", $.integer),
        field("operator", choice($.operator, $.identifier, alias(".", $.operator))),
      ),

    // --- impl (replaces instance) ---
    //
    // impl [Constraint =>] ClassName TypeArg* := { ... }
    // impl _name :: [Constraint =>] ClassName TypeArg* := Expr

    assoc_type_definition: ($) =>
      seq("type", field("name", $.constructor), ":=", field("rhs", $._type)),

    // data Name := Con fields | Con fields (in impl body)
    assoc_type_signature: ($) =>
      seq("type", field("name", $.constructor), repeat($._type_binder), "::", $._kind),

    // Associated data signature in class body: data Name params :: Kind
    assoc_data_signature: ($) =>
      seq("form", field("name", $.constructor), repeat($._type_binder), "::", $._kind),

    // Constraint: ClassName arg1 arg2 ... =>
    constraint: ($) =>
      seq($._constraint_head, "=>"),

    _constraint_head: ($) =>
      choice(
        seq($.constructor, repeat($._constraint_arg)),
        seq("(", sep1(seq($.constructor, repeat($._constraint_arg)), ","), ")"),
      ),

    method_signature: ($) =>
      seq(field("name", choice($.identifier, $.parenthesized_operator)), ":", field("type", $._type)),

    method_definition: ($) =>
      seq(field("name", choice($.identifier, $.parenthesized_operator)), ":=", field("value", $._expression)),

    // --- type annotation / value definition ---

    type_annotation: ($) =>
      seq(
        field("name", choice($.identifier, $.parenthesized_operator)),
        "::",
        field("type", $._type),
      ),

    value_definition: ($) =>
      seq(
        field("name", choice($.identifier, $.parenthesized_operator)),
        ":=",
        field("value", $._expression),
      ),

    parenthesized_operator: ($) => seq("(", choice($.operator, alias(".", $.operator)), ")"),

    // ════════════════════════════════════════════════════════════════════
    //  Type binders & kinds
    // ════════════════════════════════════════════════════════════════════

    _type_binder: ($) => choice($.identifier, $.kinded_variable),

    kinded_variable: ($) =>
      seq("(", field("name", $.identifier), ":", field("kind", $._kind), ")"),

    _kind: ($) => choice($.kind_arrow, $._kind_atom),

    kind_arrow: ($) => prec.right(1, seq($._kind_atom, "->", $._kind)),

    _kind_atom: ($) => choice($.constructor, $.identifier, seq("(", $._kind, ")")),

    // ════════════════════════════════════════════════════════════════════
    //  Type expressions
    //
    //  Flat supertype: all type forms at one level. Left-recursive
    //  type_application resolved by prec.left(10). No separate _type_atom.
    // ════════════════════════════════════════════════════════════════════

    _type: ($) =>
      choice(
        $.forall_type,
        $.qualified_type,
        $.function_type,
        $.type_application,
        $.type_case,
        // Atoms directly in supertype:
        $.identifier,
        $.constructor,
        $.qualified_type_constructor,
        $.wildcard,
        $.unit_type,
        $.parenthesized_type,
        $.tuple_type,
        $.row_type,
      ),

    forall_type: ($) => seq("\\", repeat1($._type_binder), ".", $._type),

    // Constraint is just _type before =>. Eq a parses as type_application(Eq, a).
    type_application: ($) =>
      prec.left(10, seq(
        field("constructor", $._type),
        field("argument", $._type),
      )),

    function_type: ($) => prec.right(2, seq($._type, "->", $._type)),

    // Type-level case expression (used in type families).
    // `case scrutinee { Pattern => Type; ... }`
    type_case: ($) =>
      seq(
        "case",
        field("scrutinee", $._type),
        "{",
        optional(seq(sep1($.type_case_branch, ";"), optional(";"))),
        "}",
      ),

    type_case_branch: ($) =>
      seq(field("pattern", $._type), "=>", field("body", $._type)),

    // Qualified type constructor: M.Type (adjacency-sensitive, via external scanner).
    _type_arg: ($) =>
      choice(
        $.identifier,
        $.constructor,
        $.qualified_type_constructor,
        $.wildcard,
        $.unit_type,
        $.parenthesized_type,
        $.tuple_type,
        $.row_type,
      ),

    parenthesized_type: ($) => seq("(", $._type, ")"),

    _expression: ($) =>
      choice(
        $.lambda_expression,
        $.case_expression,
        $.do_expression,
        $.if_expression,
        $.type_annotated_expression,
        $.evidence_injection,
        $._simple_expression,
      ),

    // If-then-else: right-associative (nested else-branches).
    lambda_expression: ($) =>
      prec.right(
        0,
        seq("\\", repeat1(field("pattern", $._simple_pattern)), ".", field("body", $._expression)),
      ),

    // case_expression uses _case_brace (external token) instead of "{".
    // This avoids the LALR shift-reduce conflict where application's
    // prec.left(10) would consume `{` as a block_expression atom,
    // preventing the scrutinee from reducing.
    _application_or_atom: ($) => choice($.application, $._atom),

    application: ($) =>
      prec.left(10, seq($._application_or_atom, $._atom)),

    // Qualified references: M.x (variable), M.Just (constructor).
    // Adjacency-sensitive via _qualified_dot (external scanner).
    _atom: ($) =>
      choice(
        $.identifier,
        $.constructor,
        $.qualified_variable,
        $.qualified_constructor,
        $.integer,
        $.double,
        $.string,
        $.rune,
        $.unit_expression,
        $.parenthesized_expression,
        $.tuple_expression,
        $.list_expression,
        $.record_expression,
        $.record_update_expression,
        $.block_expression,
        $.projection_expression,
        $.type_application_expression,
        $.operator_section,
        $.right_section,
        $.left_section,
        $.lambda_expression,
        $.do_expression,
        $.case_expression,
      ),

    parenthesized_expression: ($) =>
      seq("(", $._expression, optional(seq("::", $._type)), ")"),

    // Operator sections — expression-level counterpart of (op) in declarations.
    // (op)      -> operator as first-class value
    // (op expr) -> right section: \x. x op expr
    // (expr op) -> left section:  \x. expr op x
    //
    // _section_op includes `.` (infixr 9, function composition) which is
    // excluded from the operator regex to avoid conflicts with quantifier/lambda/module
    // separators, but is valid in section position.

    _simple_pattern: ($) =>
      choice(
        $.identifier,
        $.wildcard,
        $.constructor,
        $.qualified_constructor,
        $.integer,
        $.double,
        $.string,
        $.rune,
        $.unit_pattern,
        $.parenthesized_pattern,
        $.tuple_pattern,
        $.record_pattern,
        $.list_pattern,
      ),

    identifier: (_) => /[a-z][a-zA-Z0-9_']*|_[a-zA-Z0-9_']+/,
    constructor: (_) => /[A-Z][a-zA-Z0-9_']*/,
    // `:` and `.` are handled specially by the lexer (type annotations,
    // quantifier/lambda body separator, etc.) and must not appear in operator tokens.
    // `->` and `<-` are reserved and excluded from the operator regex
    // so they are always lexed as keyword tokens, never as operators.
    // The regex handles three cases:
    //   - 3+ operator chars (cannot be just -> or <-)
    //   - 2 operator chars that are NOT -> or <-
    //   - 1 operator char
    operator: (_) => {
      const op = /[!#$%&*+\-/<=>?^~|]/;
      return token(choice(
        // 3 or more operator characters — always valid
        seq(op, op, op, repeat(op)),
        // 2 operator characters, excluding -> and <-:
        //   first is NOT - and NOT <: anything goes for second
        seq(/[!#$%&*+/=>?^~|]/, op),
        //   first IS -, second is NOT >
        seq("-", /[!#$%&*+\-/<=?^~|]/),
        //   first IS <, second is NOT -
        seq("<", /[!#$%&*+/<=>?^~|]/),
        // single operator character
        op,
      ));
    },
    integer: (_) => /[0-9](_?[0-9])*/,

    // Double literal: decimal point and/or exponent, with optional underscore separators.
    // Matches: 3.14, 1e10, 1.05e+10, 2_000.5e-3
    // The decimal-point form requires a digit after `.` to avoid ambiguity with
    // the composition operator (infixr 9).
    line_comment: (_) => token(seq("--", /[^\n]*/)),
  },
});
