test/corpus/declarations.txt
===============
Import simple module
===============

import Std.Num

---

(source_file
  (import_declaration
    (module_name
      (constructor)
      (constructor))))

===============
Import nested module
===============

import Std.Str

---

(source_file
  (import_declaration
    (module_name
      (constructor)
      (constructor))))

===============
Multiple imports
===============

import Std.Num
import Std.Str

---

(source_file
  (import_declaration
    (module_name
      (constructor)
      (constructor)))
  (import_declaration
    (module_name
      (constructor)
      (constructor))))

===============
Qualified import
===============

import Data.Map as M

---

(source_file
  (import_declaration
    (module_name
      (constructor)
      (constructor))
    (import_alias
      alias: (constructor))))

===============
Selective import with values
===============

import Prelude (map, filter)

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (identifier))
      (import_item
        (identifier)))))

===============
Selective import with operator
===============

import Prelude ((+), (.))

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (parenthesized_operator
          (operator)))
      (import_item
        (parenthesized_operator
          (operator))))))

===============
Selective import with type bare
===============

import Prelude (Maybe, Bool)

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (constructor))
      (import_item
        (constructor)))))

===============
Selective import with all subs
===============

import Prelude (Maybe(..))

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (constructor)
        (import_members)))))

===============
Selective import with specific subs
===============

import Prelude (Maybe(Just, Nothing))

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (constructor)
        (import_members
          (constructor)
          (constructor))))))

===============
Selective import mixed
===============

import Prelude (map, Maybe(..), (+))

---

(source_file
  (import_declaration
    (module_name
      (constructor))
    (import_list
      (import_item
        (identifier))
      (import_item
        (constructor)
        (import_members))
      (import_item
        (parenthesized_operator
          (operator))))))

===============
Simple ADT enumeration
===============

form Bool := True | False

---

(source_file
  (form_declaration
    name: (constructor)
    body: (adt_constructors
      (adt_constructor
        name: (constructor))
      (adt_constructor
        name: (constructor)))))

===============
Lazy co-data declaration
===============

lazy Stream a := { LCons: a -> Stream a -> Stream a; LNil: Stream a; }

---

(source_file
  (form_declaration
    name: (constructor)
    (identifier)
    body: (form_brace_body
      (gadt_constructor
        name: (constructor)
        type: (function_type
          (identifier)
          (function_type
            (type_application
              constructor: (constructor)
              argument: (identifier))
            (type_application
              constructor: (constructor)
              argument: (identifier)))))
      (gadt_constructor
        name: (constructor)
        type: (type_application
          constructor: (constructor)
          argument: (identifier))))))

===============
ADT with type parameter
===============

form Maybe a := Just a | Nothing

---

(source_file
  (form_declaration
    name: (constructor)
    (identifier)
    body: (adt_constructors
      (adt_constructor
        name: (constructor)
        (identifier))
      (adt_constructor
        name: (constructor)))))

===============
ADT with multiple parameters
===============

form Result e a := Ok a | Err e

---

(source_file
  (form_declaration
    name: (constructor)
    (identifier)
    (identifier)
    body: (adt_constructors
      (adt_constructor
        name: (constructor)
        (identifier))
      (adt_constructor
        name: (constructor)
        (identifier)))))

===============
ADT with recursive type
===============

form List a := Cons a (List a) | Nil

---

(source_file
  (form_declaration
    name: (constructor)
    (identifier)
    body: (adt_constructors
      (adt_constructor
        name: (constructor)
        (identifier)
        (parenthesized_type
          (type_application
            constructor: (constructor)
            argument: (identifier))))
      (adt_constructor
        name: (constructor)))))

===============
ADT with kinded parameter
===============

form Dict (c : Constraint) := MkDict

---

(source_file
  (form_declaration
    name: (constructor)
    (kinded_variable
      name: (identifier)
      kind: (constructor))
    body: (adt_constructors
      (adt_constructor
        name: (constructor)))))

===============
GADT declaration
===============

form Expr := \a. {
  LitInt: Int -> Expr Int;
  LitBool: Bool -> Expr Bool
}

---

(source_file
  (form_declaration
    name: (constructor)
    body: (form_brace_body
      (identifier)
      (gadt_constructor
        name: (constructor)
        type: (function_type
          (constructor)
          (type_application
            constructor: (constructor)
            argument: (constructor))))
      (gadt_constructor
        name: (constructor)
        type: (function_type
          (constructor)
          (type_application
            constructor: (constructor)
            argument: (constructor)))))))

===============
Type alias
===============

type Effect r a := Computation r r a

---

(source_file
  (type_declaration
    (type_alias
      name: (constructor)
      (identifier)
      (identifier)
      type: (type_application
        constructor: (type_application
          constructor: (type_application
            constructor: (constructor)
            argument: (identifier))
          argument: (identifier))
        argument: (identifier)))))

===============
Fixity left-associative operator
===============

infixl 6 +

---

(source_file
  (fixity_declaration
    precedence: (integer)
    operator: (operator)))

===============
Fixity right-associative operator
===============

infixr 5 <>

---

(source_file
  (fixity_declaration
    precedence: (integer)
    operator: (operator)))

===============
Fixity with identifier
===============

infixl 6 plus

---

(source_file
  (fixity_declaration
    precedence: (integer)
    operator: (identifier)))

===============
Type annotation simple
===============

f :: Int -> Bool

---

(source_file
  (type_annotation
    name: (identifier)
    type: (function_type
      (constructor)
      (constructor))))

===============
Value definition simple
===============

x := 42

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Operator type annotation
===============

(+) :: Int -> Int -> Int

---

(source_file
  (type_annotation
    name: (parenthesized_operator
      (operator))
    type: (function_type
      (constructor)
      (function_type
        (constructor)
        (constructor)))))

===============
Operator value definition
===============

(+) := add

---

(source_file
  (value_definition
    name: (parenthesized_operator
      (operator))
    value: (identifier)))

===============
Semicolon-separated declarations
===============

x := 1; y := 2

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer))
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Newline-separated declarations
===============

x := 1
y := 2

---

(source_file
  (value_definition
    name: (identifier)
    value: (integer))
  (value_definition
    name: (identifier)
    value: (integer)))

===============
Type family simple
===============

type Elem :: Type := \(c: Type). case c {
  List a => a;
  String => Rune
}

---

(source_file
  (type_declaration
    (type_family
      name: (constructor)
      result: (constructor)
      body: (forall_type
        (kinded_variable
          name: (identifier)
          kind: (constructor))
        (type_case
          scrutinee: (identifier)
          (type_case_branch
            pattern: (type_application
              constructor: (constructor)
              argument: (identifier))
            body: (identifier))
          (type_case_branch
            pattern: (constructor)
            body: (constructor)))))))

===============
Dot operator fixity
===============

infixr 9 .

---

(source_file
  (fixity_declaration
    precedence: (integer)
    operator: (operator)))

===============
Dot operator definition
===============

(.) :: \b c a. (b -> c) -> (a -> b) -> a -> c
(.) := \f g x. f (g x)

---

(source_file
  (type_annotation
    name: (parenthesized_operator
      (operator))
    type: (forall_type
      (identifier)
      (identifier)
      (identifier)
      (function_type
        (parenthesized_type
          (function_type
            (identifier)
            (identifier)))
        (function_type
          (parenthesized_type
            (function_type
              (identifier)
              (identifier)))
          (function_type
            (identifier)
            (identifier))))))
  (value_definition
    name: (parenthesized_operator
      (operator))
    value: (lambda_expression
      pattern: (identifier)
      pattern: (identifier)
      pattern: (identifier)
      body: (application
        (identifier)
        (parenthesized_expression
          (application
            (identifier)
            (identifier)))))))
